syntax = "proto3";

package KurzSharp.GrpcApi;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service ProductProtoService {
  rpc GetProducts (google.protobuf.Empty) returns (ProductDtosResponse){
    option (google.api.http) = {
      get: "/grpc/v1/products"
    };
  };

  rpc AddProduct (ProductDto) returns (ProductDtosResponse){
    option (google.api.http) = {
      post: "/grpc/v1/products"
    };
  };

  rpc DeleteProduct (ProductDto) returns (ProductDtosResponse){
    option (google.api.http) = {
      delete: "/grpc/v1/products"
    };
  };

  rpc UpdateProduct (ProductDto) returns (ProductDtosResponse){
    option (google.api.http) = {
      put: "/grpc/v1/products"
    };
  };
}

message ProductDto {
// Props Placeholder
    string id = 1;
    string name = 2;
    string description = 3;
}

message ProductDtosResponse {
  repeated ProductDto ProductDtos = 1;
}